--- a/.github/workflows/main_nysun.yml
+++ b/.github/workflows/main_nysun.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -25,17 +25,15 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install --force
+          npm install
           npm run build --if-present
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
+          npm run test --if-present
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,20 +47,17 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E91EFB482D554D8C915556A352E821A0 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BDF337551476436CA620703F764E0C38 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7089C087C65A495E9275F880E360FE87 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_03B8090CA26549B8A4B85342B7983C27 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AF9BA334801A40CB957E824FB2351535 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_EDD935D98DD54B299E71773DBDC7CE54 }}
 
       - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
         with:
           app-name: 'NySun'
           slot-name: 'Production'
