--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "Copy-Item -Path public\\web.config -Destination build\\web.config",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
